# RFIDiceBoard

./: .gitignore  Notes.txt
KiCad/RFIDice_V0_revised/: RFIDice_V0_revised-B_Cu.gbr  RFIDice_V0_revised-B_Mask.gbr  RFIDice_V0_revised-B_Paste.gbr  RFIDice_V0_revised-B_Silkscreen.gbr  RFIDice_V0_revised-Edge_Cuts.gbr  RFIDice_V0_revised-F_Cu.gbr  RFIDice_V0_revised-F_Mask.gbr  RFIDice_V0_revised-F_Paste.gbr  RFIDice_V0_revised-F_Silkscreen.gbr  RFIDice_V0_revised-NPTH.drl  RFIDice_V0_revised-PTH.drl  RFIDice_V0_revised-job.gbrjob  RFIDice_V0_revised.kicad_pcb  RFIDice_V0_revised.kicad_prl  RFIDice_V0_revised.kicad_pro  RFIDice_V0_revised.kicad_sch  RFIDice_V0_revised.xml  RFIDice_V0_revisedNew.csv  fp-info-cache
RFIDiceBoardProject/: buttons.c  main.c  main.h  rand_gen.h  tftdisplay.c  tftdisplay.h
Software/RFIDiceBoard_V0_Software/: CMakeLists.txt  adc.c  adc.h  buttons.c  buttons.h  main.c  main.h  pn532.c  pn532.h  rand_gen.c  rand_gen.h  tftdisplay.c  tftdisplay.h  timer.c
Software/RFIDiceBoard_V1_Software/: adc.c  adc.h  buttons.c  buttons.h  main.c  main.h  pn532.h  rand_gen.c  rand_gen.h  tftdisplay.c  tftdisplay.h  timer.c  timer.h
Software/prototyping/bus_scan/: CMakeLists.txt  bus_scan.c
documentation/: ReqFeedbackSpreadsheet_LUND_APPROVE_NewComments.xlsx  ReqsVerfDoc.docx  TroyeraChangeOrder.docx
prototyping/pico-PN532-proto/: CMakeLists.txt  PN532DriverProto.c  PN532DriverProto.h
troyermade/: CMakeLists.txt  adc.c  adc.h  buttons.c  main.c  pn532.c  rand_gen.c  rand_gen.h  systickdelay.c  tftdisplay.c  tftdisplay.h
(+9 files in other folders)
